--- a/requirements1.txt
+++ b/requirements1.txt
@@ -38,6 +38,7 @@ pydantic_core==2.33.1
 pyparsing==3.2.3
 pyperclip==1.8.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 requests==2.30.0
 six==1.17.0
 sniffio==1.3.1
